scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsdocTypeFromChainedAssignment.errors.txt
a.js(14,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
a.js(17,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
a.js(18,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.


==== a.js (3 errors) ====
    function A () {
        this.x = 1
        /** @type {1} */
        this.first = this.second = 1
    }
    /** @param {number} n */
    A.prototype.y = A.prototype.z = function f(n) {
        return n + this.x
    }
    /** @param {number} m */
    A.s = A.t = function g(m) {
        return m + this.x
    }
    var a = new A()
            ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    a.y('no') // error
    a.z('not really') // error
    A.s('still no') // error
        ~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    A.t('not here either') // error
        ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    a.first = 10 // error: '10' isn't assignable to '1'
    